# amaranth-check

./: .gitignore  Package.swift  README.md  package.json
.github/workflows/: build-windows.yml  ci.yml  release.yml
Sources/AmaranthCheck/: Config.swift  Scraper.swift  SettingsWindow.swift  StatusBar.swift  Store.swift  main.swift
macos/Sources/AmaranthCheck/: Config.swift  Helpers.swift  LaunchAgent.swift  Scraper.swift  SettingsWindow.swift  StatusBar.swift  Store.swift  TimeCalc.swift  main.swift
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  launch.rs  main.rs  tray.rs
windows/scripts/: check.template.mjs
windows/src/: index.html  main.js  styles.css
windows/src-tauri/: Cargo.toml  tauri.conf.json
windows/src-tauri/capabilities/: default.json
windows/src-tauri/src/: main.rs  scraper.rs
