[package]
name = "amaranth-check-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
dirs = "6"
tokio = { version = "1", features = ["process", "fs", "time"] }
open = "5"

[build-dependencies]
tauri-build = { version = "2", features = [] }
